<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040404"
    android:columnCount="4"
    android:rowCount="7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="275dp"
        android:layout_height="123dp"
        android:layout_columnSpan="4"
        android:background="#796C6C"
        android:padding="10dp"
        android:textColor="#0E0E0E"
        android:textSize="50sp" />

    <Button
        android:id="@+id/oito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/oito"
        android:textSize="20sp" />

    <Button
        android:id="@+id/nove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/nove"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/sete"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/divide"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/quatro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/um"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setDot"
        android:padding="26dp"
        android:text="@string/ponto"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/cinco"
        android:textSize="20sp" />

    <Button
        android:id="@+id/seis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/seis"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/multiplica"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/dois"
        android:textSize="20sp" />

    <Button
        android:id="@+id/tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/tres"
        android:textSize="20sp" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:onClick="setValue"
        android:padding="26dp"
        android:text="@string/zero"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/igual"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/subtrai"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/soma"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_margin="3dp"
        android:backgroundTint="#F44336"
        android:padding="26dp"
        android:text="@string/delete"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivPato"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_columnSpan="4"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pato" />

</GridLayout>